[XNIO-428] Reset 'java.security.manager' default value back to allow by default to be able to test on JDK18+